# daily-notes

./: .gitignore  CLAUDE.md  README.md  daily_notes_plan.md  prd1.md  pyproject.toml
.agents/skills/daily-notes/: SKILL.md  commands.md
daily-notes/: SKILL.md
docs/superpowers/plans/: 2026-07-20-daily-notes.md
docs/superpowers/specs/: 2026-07-20-daily-notes-design.md
skills/daily-notes/: SKILL.md  checklist.md  commands.md
src/daily_notes/: cli.py
src/daily_notes/commands/: add.py  decorators.py  ingest.py  link.py  list_cmd.py  review.py  search.py  setup.py
src/daily_notes/core/: config.py  frontmatter.py  id.py  vault.py
src/daily_notes/skills/: checklist.md  commands.md  daily-notes.md
tests/: conftest.py  test_add.py  test_decorators.py  test_frontmatter.py  test_id.py  test_ingest.py  test_integration.py  test_link.py  test_list.py  test_review.py  test_search.py  test_setup.py  test_shortcuts.py  test_vault.py
